Experimented with new JUnit5